using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IEatable
{
    bool IsEatable();
    void Eaten();
}
